--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <button id="volumeBtn">🔊</button>
       </div>
     </div>
-    <a href="https://seulink.com" class="cta-button">Eu quero saber mais</a>
+    <a href="https://pay.kirvano.com/6f2604d6-71d5-47ad-a446-413289df45f3" class="cta-button">Eu quero saber mais</a>
   </div>
 
   <div class="info-section">
